# DocuMindRAG

./: .gitignore  docker-compose.yml  setup_query.txt
documind-ui/: README.md  package-lock.json  package.json
documind-ui/src/: index.html  styles.css
documind-ui/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
documind-ui/src/app/components/chat/: chat.html
documind-ui/src/app/components/dashboard/: dashboard.html  dashboard.ts
documind-ui/src/app/components/my-document/: my-document.html  my-document.spec.ts  my-document.ts
documind-ui/src/app/components/sidebar/: sidebar.html  sidebar.ts
documind-ui/src/app/models/: ChatMessage.ts  DocumentItem.ts
documind-ui/src/app/services/: api-gateway.spec.ts  api-gateway.ts
gateway-service/: .dockerignore  Dockerfile  pom.xml
gateway-service/src/main/java/com/documind/gateway_service/: GatewayServiceApplication.java
gateway-service/src/main/java/com/documind/gateway_service/config/: GatewayConfig.java
gateway-service/src/main/java/com/documind/gateway_service/controller/: GatewayIngestController.java
gateway-service/src/main/java/com/documind/gateway_service/dto/: QueryRequest.java  QueryResponse.java
gateway-service/src/main/resources/: GatewayIngestController.java  application.yaml
gateway-service/src/test/java/com/documind/gateway_service/: GatewayServiceApplicationTests.java
rag-core-service/: .dockerignore  .gitignore  Dockerfile  config.py  main.py  model.py  pyproject.toml  query_engine.py  requirements.txt  vector_store.py
