[project]
name = "rag-core-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "flashrank>=0.2.10",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
